modules/gcp-from-within-gke/assets/manifests/travel-manager-with-nginx-url.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop
  labels:
    app: travel-manager
    version: v1
  name: travel-manager-v1
spec:
  selector:
    matchLabels:
      app: travel-manager
      version: v1
  template:
    metadata:
      labels:
        app: travel-manager
        version: v1
    spec:
      containers:
        - name: travel-manager
          image: stacklabs/travel-manager:0.0.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 256m
              memory: "256Mi"
            limits:
              cpu: 256m
              memory: "256Mi"
