modules/gcp-from-within-gke/assets/manifests/istio-plan.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: workshop
---
apiVersion: v1
kind: Service
metadata:
  namespace: workshop
  name: distance-calculator
  labels:
    app: distance-calculator
spec:
  ports:
    - name: http
      port: 8082
  selector:
    app: distance-calculator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop
  labels:
    app: distance-calculator
    version: v1
  name: distance-calculator-v1
spec:
  selector:
    matchLabels:
      app: distance-calculator
      version: v1
  template:
    metadata:
      labels:
        app: distance-calculator
        version: v1
    spec:
      containers:
        - name: distance-calculator
          image: stacklabs/distance-calculator:0.0.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
          livenessProbe:
            httpGet:
              path: /probes/liveness
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /probes/readiness
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: workshop
  name: distance-calculator
spec:
  hosts:
    - distance-calculator
  http:
    - route:
        - destination:
            host: distance-calculator
            subset: version-1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: workshop
  name: distance-calculator
spec:
  host: distance-calculator
  subsets:
    - name: version-1
      labels:
        version: v1
---
apiVersion: v1
kind: Service
metadata:
  namespace: workshop
  name: travel-manager
  labels:
    app: travel-manager
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: travel-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop
  labels:
    app: travel-manager
    version: v1
  name: travel-manager-v1
spec:
  selector:
    matchLabels:
      app: travel-manager
      version: v1
  template:
    metadata:
      labels:
        app: travel-manager
        version: v1
    spec:
      containers:
        - name: travel-manager
          image: stacklabs/travel-manager:0.0.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 256m
              memory: "256Mi"
            limits:
              cpu: 256m
              memory: "256Mi"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: workshop
  name: travel-manager
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: workshop
  name: travel-manager
spec:
  hosts:
    - "*"
  gateways:
    - travel-manager
  http:
    - route:
        - destination:
            host: travel-manager
            subset: version-1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: workshop
  name: travel-manager
spec:
  host: travel-manager
  subsets:
    - name: version-1
      labels:
        version: v1
